--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,8 @@ language: node_js
 node_js: "10"
 branches:
   only:
-  - master
-services:
-  - mysql
+  - main
 cache:
   directories:
     - node_modules
-before_install:
-  - mysql -e 'CREATE DATABASE project2_test;'
+
